--- a/LearnOpenGL/LearnOpenGL.vcxproj
+++ b/LearnOpenGL/LearnOpenGL.vcxproj
@@ -68,8 +68,8 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <IncludePath>C:\Users\Paula\Downloads\glfw-3.2.1\glfw-3.2.1\include;C:\Users\Paula\Downloads\glad\include;C:\Users\Paula\Downloads\glm-0.9.9.2\glm-0.9.9.2\glm;C:\Users\Paula\Downloads\LearnOpenGL-master\LearnOpenGL-master;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Users\Paula\Downloads\glfw-3.2.1\glfw-3.2.1\Compile\src\Debug;C:\Users\Paula\Downloads\LearnOpenGL-master\LearnOpenGL-master\LearnOpenGL;$(LibraryPath)</LibraryPath>
+    <IncludePath>D:\Downloads\glfw-3.2.1\include;D:\Downloads\glm-0.9.9.1\glm-0.9.9.1\glm;D:\Downloads\glad-master\build\include;$(IncludePath)</IncludePath>
+    <LibraryPath>D:\Downloads\glfw-3.2.1\build\src\Debug;D:\Downloads\glm-0.9.9.1\glm-0.9.9.1\build\glm\Debug;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <IncludePath>C:\Users\Paula\Downloads\glad\include;$(IncludePath)</IncludePath>
@@ -122,7 +122,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\glad\src\glad.c" />
+    <ClCompile Include="..\..\..\..\Downloads\glad-master\build\src\glad.c" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
