--- a/LearnOpenGL/LearnOpenGL.vcxproj.filters
+++ b/LearnOpenGL/LearnOpenGL.vcxproj.filters
@@ -18,7 +18,7 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\glad\src\glad.c">
+    <ClCompile Include="..\..\..\..\Downloads\glad-master\build\src\glad.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
